Fixed Alignments of DemoPage
While waiting for the DNS to update.
Fixed Some Styling.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 
 body {
     background-color: #202020;
-    margin: 5rem;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 70vh;
 }
 
 .card {
@@ -11,21 +14,23 @@ body {
     background-color: #323232;
     border-radius: 2rem;
     box-shadow: #000;
-    padding: 3rem 4rem;
     margin-bottom: 24pt;
     border: 2px solid #CCCCCC10;
-    
+    width: 50%;
+    max-width: 800px;
 }
 
 .title {
     font-size: 36px;
     font-family: Arial, Helvetica, sans-serif;
     color: #FFF;
+    margin: 3rem 3rem 0.5rem 3rem;
 }
 
 p {
     color: #DDD ;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0rem 3rem 3rem 3rem;
 }
 
 a {
@@ -58,4 +63,10 @@ a:hover {
     transition: 150ms;
     transition-timing-function: ease;
     color: #609065;
+}
+
+.buttons {
+    width: 50%;
+    text-align: left;
+    max-width: 800px;
 }
